--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,10 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.0.1'
 
 
+    implementation 'org.apache.httpcomponents:httpcore:4.4.15'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
+
     // 테스트
     testImplementation "org.springframework:spring-test:${springVersion}"
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
